iOS: Add easy switch to turn off motion pointer

--- a/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/Controller/Base.lproj/ControllerSettings.storyboard
+++ b/Source/iOS/DolphiniOS/DolphiniOS/UI/Settings/Controller/Base.lproj/ControllerSettings.storyboard
@@ -1044,8 +1044,38 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="44" id="k2W-TQ-cSM">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="44" id="Jyz-cA-gaU">
                                         <rect key="frame" x="16" y="106" width="343" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jyz-cA-gaU" id="W7u-nJ-pZS">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Motion Pointer" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="red-cu-aCy">
+                                                    <rect key="frame" x="16" y="11" width="270" height="22"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AGY-VA-zAp">
+                                                    <rect key="frame" x="278" y="6.6666666666666679" width="51" height="31.000000000000004"/>
+                                                    <connections>
+                                                        <action selector="MotionPointerChanged:" destination="cCm-i9-QPx" eventType="valueChanged" id="OxR-Tc-VDO"/>
+                                                    </connections>
+                                                </switch>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="red-cu-aCy" firstAttribute="bottom" secondItem="W7u-nJ-pZS" secondAttribute="bottomMargin" id="DON-F6-3n8"/>
+                                                <constraint firstItem="red-cu-aCy" firstAttribute="centerY" secondItem="W7u-nJ-pZS" secondAttribute="centerY" id="LkP-Fw-ZfC"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="AGY-VA-zAp" secondAttribute="trailing" id="Mga-pT-VwM"/>
+                                                <constraint firstItem="AGY-VA-zAp" firstAttribute="leadingMargin" secondItem="red-cu-aCy" secondAttribute="trailing" id="cGf-zr-VVI"/>
+                                                <constraint firstItem="red-cu-aCy" firstAttribute="leading" secondItem="W7u-nJ-pZS" secondAttribute="leadingMargin" id="eVO-Dw-x4W"/>
+                                                <constraint firstItem="AGY-VA-zAp" firstAttribute="centerY" secondItem="W7u-nJ-pZS" secondAttribute="centerY" id="wKb-IE-vWV"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" rowHeight="44" id="k2W-TQ-cSM">
+                                        <rect key="frame" x="16" y="150" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="k2W-TQ-cSM" id="bqS-Vn-h3U">
                                             <rect key="frame" x="0.0" y="0.0" width="343" height="44"/>
@@ -1075,7 +1105,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="xWN-FZ-Ljt">
-                                        <rect key="frame" x="16" y="150" width="343" height="43.5"/>
+                                        <rect key="frame" x="16" y="194" width="343" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="xWN-FZ-Ljt" id="Sjp-Nj-w0M">
                                             <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
@@ -1115,6 +1145,7 @@
                     <connections>
                         <outlet property="m_button_opacity_slider" destination="cKe-Dg-Tgd" id="zG2-Pr-asr"/>
                         <outlet property="m_haptic_switch" destination="Mps-w0-Avx" id="HqZ-Av-mED"/>
+                        <outlet property="m_motion_pointer_switch" destination="AGY-VA-zAp" id="WyF-lo-Ajl"/>
                         <outlet property="m_motion_switch" destination="5Lf-z9-7fU" id="yHl-Oj-5aj"/>
                         <outlet property="m_recentering_switch" destination="BBT-LV-FL3" id="6uz-I3-ibb"/>
                     </connections>
